Minor spacing fixes

--- a/frontend/src/app/modules/routes/modules/templates/details/details.scss
+++ b/frontend/src/app/modules/routes/modules/templates/details/details.scss
@@ -60,7 +60,7 @@ page[name="routes"] page[name="templates-details"]
             &.--all-days > check-toggle,
             &.--all-days > span
             {
-                margin-top: 6.75rem;
+                margin-top: 6rem;
             }
 
             > span
