--- a/frontend/src/app/temp.scss
+++ b/frontend/src/app/temp.scss
@@ -53,7 +53,7 @@ page-header tab-nav tab button
 page-content > name-value-list
 {
     padding: 4.5rem 9rem 0 9rem;
-    margin-bottom: -1rem;
+    margin-bottom: -1.5rem;
 }
 
 page-sidebar .page-sidebar-edge-icon icon
