--- a/frontend/src/resources/styles/framework/layout/_margin.scss
+++ b/frontend/src/resources/styles/framework/layout/_margin.scss
@@ -67,25 +67,25 @@ $__summary: comment;
     &,
     &-top
     {
-        margin-top: 9rem;
+        margin-top: 8rem;
     }
 
     &,
     &-left
     {
-        margin-left: 9rem;
+        margin-left: 8rem;
     }
 
     &,
     &-right
     {
-        margin-right: 9rem;
+        margin-right: 8rem;
     }
 
     &,
     &-bottom
     {
-        margin-bottom: 9rem;
+        margin-bottom: 8rem;
     }
 }
 
@@ -95,25 +95,25 @@ $__summary: comment;
     &,
     &-top
     {
-        margin-top: 6rem;
+        margin-top: 5rem;
     }
 
     &,
     &-left
     {
-        margin-left: 6rem;
+        margin-left: 5rem;
     }
 
     &,
     &-right
     {
-        margin-right: 6rem;
+        margin-right: 5rem;
     }
 
     &,
     &-bottom
     {
-        margin-bottom: 6rem;
+        margin-bottom: 5rem;
     }
 }
 
